--- a/games.html
+++ b/games.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Series</title>
+        <title>Games</title>
     </head>
     <body>
         <div>
@@ -8,24 +8,21 @@
                 <li>Home</li>
                 <li>Films</li>
                 <li>Series</li>
-				<li>Games</li
             </ul>
         </div>
         <div>
-            <h1>Series</h1>
+            <h1>Games</h1>
             <table>
                 <thead>
                     <th>Indiener</th>
                     <th>Naam</th>
-                    <th>Aantal seizoenen</th>
                     <th>Genre(s)</th>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Hanno</td>
-                        <td>The Mandalorian</td>
-                        <td>2</td>
-                        <td>science-fiction</td>
+                   <tr>
+                        <td>Joren De Wolf</td>
+                        <td>Ori and the Blind Forest</td>
+                        <td>2D platformer</td>
                     </tr>
                 </tbody>
             </table>
