Yuri added three series

--- a/series.html
+++ b/series.html
@@ -26,6 +26,24 @@
                         <td>2</td>
                         <td>science-fiction</td>
                     </tr>
+                    <tr>
+                        <td>Yuri</td>
+                        <td>Manhunt (Unabomber)</td>
+                        <td>1</td>
+                        <td>Thriller/Crime</td>
+                    </tr>
+                    <tr>
+                        <td>Yuri</td>
+                        <td>Black Mirror</td>
+                        <td>5</td>
+                        <td>Thriller/science-fiction</td>
+                    </tr>
+                    <tr>
+                        <td>Yuri</td>
+                        <td>Homeland</td>
+                        <td>8</td>
+                        <td>Thriller</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
