Added a recommendation for both films.html and series.html

--- a/series.html
+++ b/series.html
@@ -26,6 +26,12 @@
                         <td>2</td>
                         <td>science-fiction</td>
                     </tr>
+                    <tr>
+                        <td>Vink</td>
+                        <td>Mr. Robot</td>
+                        <td>4</td>
+                        <td>drama</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
