Sporten pagina toegevoegd

--- a/sport.html
+++ b/sport.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Series</title>
+        <title>Sporten</title>
     </head>
     <body>
         <div>
@@ -16,16 +16,12 @@
             <table>
                 <thead>
                     <th>Indiener</th>
-                    <th>Naam</th>
-                    <th>Aantal seizoenen</th>
-                    <th>Genre(s)</th>
+                    <th>Sportnaam</th>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Hanno</td>
-                        <td>The Mandalorian</td>
-                        <td>2</td>
-                        <td>science-fiction</td>
+                        <td>Floris</td>
+                        <td>Skeeleren</td>
                     </tr>
                 </tbody>
             </table>
