--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                 <li>Home</li>
                 <li>Films</li>
                 <li>Series</li>
+                <li>Sporten</li>
             </ul>
         </div>
         <div>
