--- a/films.html
+++ b/films.html
@@ -5,9 +5,9 @@
     <body>
         <div>
             <ul>
-                <li>Home</li>
-                <li>Films</li>
-                <li>Series</li>
+                <li><a href="./index.html">Home</a></li> 
+                <li><a href="./films.html">Films</a></li>
+                <li><a href="./series.html">Series</a></li> 
             </ul>
         </div>
         <div>
