Gezelschapsspellen page added

--- a/gezelschapsspellen.html
+++ b/gezelschapsspellen.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Series</title>
+        <title>Gezelschapsspellen</title>
     </head>
     <body>
         <div>
@@ -8,24 +8,22 @@
                 <li>Home</li>
                 <li>Films</li>
                 <li>Series</li>
-				<li><a href="gezelschapsspellen.html">Gezelschapsspellen</a></li>
+				<li>Gezelschapsspellen</li>
             </ul>
         </div>
         <div>
-            <h1>Series</h1>
+            <h1>Gezelschapsspellen</h1>
             <table>
                 <thead>
                     <th>Indiener</th>
                     <th>Naam</th>
-                    <th>Aantal seizoenen</th>
-                    <th>Genre(s)</th>
+                    <th>Aantal spelers</th>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Hanno</td>
-                        <td>The Mandalorian</td>
-                        <td>2</td>
-                        <td>science-fiction</td>
+                        <td>Julian</td>
+                        <td>30 seconds</td>
+                        <td>3-24</td>
                     </tr>
                 </tbody>
             </table>
