--- a/films.html
+++ b/films.html
@@ -8,6 +8,7 @@
                 <li>Home</li>
                 <li>Films</li>
                 <li>Series</li>
+				<li><a href="gezelschapsspellen.html">Gezelschapsspellen</a></li>
             </ul>
         </div>
         <div>
