--- a/series.html
+++ b/series.html
@@ -51,6 +51,12 @@
                         <td>4</td>
                         <td>drama</td>
                     </tr>
+					<tr>
+                        <td>Joren</td>
+                        <td>Centaurworld</td>
+                        <td>1</td>
+                        <td>Fantasy</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
