--- a/index.html
+++ b/index.html
@@ -16,4 +16,7 @@
             <p>Deze wiki geeft advies over de beste vrijetijdsbesteding volgens de cursisten van de Git-training.</p>
         </div>
     </body>
+    <footer style="position:fixed; bottom: 5;">
+        &copy; Copyright 2021, Training Git
+    </footer>
 </html>
