--- a/sport.html
+++ b/sport.html
@@ -5,11 +5,10 @@
     <body>
         <div>
             <ul>
-                <li>Home</li>
-                <li>Films</li>
-                <li>Series</li>
-                <li>Sporten</li>
-				<li>Games</li>
+                <li><a href="./index.html">Home</a></li> 
+                <li><a href="./films.html">Films</a></li>
+                <li><a href="./series.html">Series</a></li> 
+				<li><a href="./games.html">Games</a></li> 
             </ul>
         </div>
         <div>
