--- a/films.html
+++ b/films.html
@@ -44,4 +44,7 @@
             </table>
         </div>
     </body>
+    <footer style="position:fixed; bottom: 5;">
+        &copy; Copyright 2021, Training Git
+    </footer>
 </html>
