--- a/series.html
+++ b/series.html
@@ -62,4 +62,7 @@
             </table>
         </div>
     </body>
+    <footer style="position:fixed; bottom: 5;">
+        &copy; Copyright 2021, Training Git
+    </footer>
 </html>
