--- a/films.html
+++ b/films.html
@@ -40,6 +40,12 @@
                         <td>2016</td>
                         <td>fantasy/comedy</td>
                     </tr>
+					<tr>
+                        <td>Floris</td>
+                        <td>The Social Dilemma</td>
+                        <td>2020</td>
+                        <td>Documentaire</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
