--- a/films.html
+++ b/films.html
@@ -41,6 +41,12 @@
                         <td>2016</td>
                         <td>fantasy/comedy</td>
                     </tr>
+					<tr>
+                        <td>Julian</td>
+                        <td>London Has Fallen</td>
+                        <td>2016</td>
+                        <td>Actie/Thriller</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
