--- a/games.html
+++ b/games.html
@@ -27,6 +27,11 @@
                         <td>Ori and the Blind Forest</td>
                         <td>2D platformer</td>
                     </tr>
+					<tr>
+                        <td>Julian</td>
+                        <td>Call of Duty Warzone</td>
+                        <td>Battle Royale</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
