--- a/series.html
+++ b/series.html
@@ -59,6 +59,12 @@
                         <td>1</td>
                         <td>Fantasy</td>
                     </tr>
+					<tr>
+                        <td>Julian</td>
+                        <td>Shooter</td>
+                        <td>3</td>
+                        <td>Actie</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
