--- a/sport.html
+++ b/sport.html
@@ -29,6 +29,10 @@
                         <td>Joren</td>
                         <td>Muurklimmen</td>
                     </tr>
+					<tr>
+                        <td>Julian</td>
+                        <td>Achteruitzwemmen</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
