--- a/gezelschapsspellen.html
+++ b/gezelschapsspellen.html
@@ -8,6 +8,7 @@
                 <li>Home</li>
                 <li>Films</li>
                 <li>Series</li>
+				<li>Games</li>
 				<li>Gezelschapsspellen</li>
             </ul>
         </div>
@@ -24,6 +25,11 @@
                         <td>Julian</td>
                         <td>30 seconds</td>
                         <td>3-24</td>
+                    </tr>
+					<tr>
+                        <td>Joren</td>
+                        <td>Secret Hitler</td>
+                        <td>5-10</td>
                     </tr>
                 </tbody>
             </table>
