Adds boardgame tip from Floris

--- a/gezelschapsspellen.html
+++ b/gezelschapsspellen.html
@@ -32,6 +32,11 @@
                         <td>Secret Hitler</td>
                         <td>5-10</td>
                     </tr>
+					<tr>
+                        <td>Floris</td>
+                        <td>Throw Throw Burrito</td>
+                        <td>2-6</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
