--- a/gezelschapsspellen.html
+++ b/gezelschapsspellen.html
@@ -43,7 +43,7 @@
             </table>
         </div>
     </body>
-    <footer style="position:fixed; bottom: 5;">
+    <footer>
         &copy; Copyright 2021, Training Git
     </footer>
 </html>
