--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>Deze wiki geeft advies over de beste vrijetijdsbesteding volgens de cursisten van de Git-training.</p>
         </div>
     </body>
-    <footer style="position:fixed; bottom: 5;">
+    <footer>
         &copy; Copyright 2021, Training Git
     </footer>
 </html>
