--- a/sport.html
+++ b/sport.html
@@ -39,7 +39,7 @@
             </table>
         </div>
     </body>
-    <footer style="position:fixed; bottom: 5;">
+    <footer>
         &copy; Copyright 2021, Training Git
     </footer>
 </html>
