--- a/films.html
+++ b/films.html
@@ -54,6 +54,12 @@
                         <td>2016</td>
                         <td>Actie/Thriller</td>
 					</tr>
+                    <tr>
+                        <td>Alexander</td>
+                        <td>Inception</td>
+                        <td>2010</td>
+                        <td>Sciencefiction/Actie</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
