--- a/series.html
+++ b/series.html
@@ -72,6 +72,12 @@
                         <td>9</td>
                         <td>Sitcom</td>
                     </tr>
+                    <tr>
+                        <td>Alexander</td>
+                        <td>Undercover</td>
+                        <td>2</td>
+                        <td>Actie/Drama</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
