Change header to sport

--- a/sport.html
+++ b/sport.html
@@ -15,7 +15,7 @@
             </ul>
         </div>
         <div>
-            <h1>Series</h1>
+            <h1>Sporten</h1>
             <table>
                 <thead>
                     <th>Indiener</th>
