--- a/gezelschapsspellen.html
+++ b/gezelschapsspellen.html
@@ -11,6 +11,7 @@
                 <li><a href="./films.html">Films</a></li>
                 <li><a href="./series.html">Series</a></li> 
                 <li><a href="./sport.html">Sporten</a></li>
+                <li><a href="./games.html">Games</a></li>
             </ul>
         </div>
         <div>
