--- a/films.html
+++ b/films.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="horriblestyle.css"/>
     </head>
     <body class="container">
-        <div class="regularDiv">
+        <div class="navigation">
             <ul>
                 <li><a href="./index.html">Home</a></li> 
                 <li><a href="./series.html">Series</a></li> 
